--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "w1nt3r.eth",
   "license": "MIT",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "qa": "node src/qa.js"
   },
   "prettier": {
     "singleQuote": true
@@ -14,7 +15,8 @@
     "@ethereumjs/vm": "^5.8.0",
     "@ethersproject/abi": "^5.6.0",
     "@openzeppelin/contracts": "^4.5.0",
-    "solc": "^0.8.13"
+    "solc": "^0.8.13",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
