--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node .",
-    "qa": "node src/qa.js"
+    "qa": "node src/qa.js",
+    "sync-users": "node src/users.js"
   },
   "prettier": {
     "singleQuote": true
