--- a/.github/workflows/sync-nfts.yml
+++ b/.github/workflows/sync-nfts.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Sync NFTs
 
 on:
   schedule:
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Sync Users
+      - name: Sync nfts
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
           cache: 'yarn'
       - run: yarn
-      - run: yarn sync-users
+      - run: yarn sync-nfts
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Sync users
+          commit_message: Sync nfts
