add foundry support

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,10 @@ libs = ['node_modules', 'lib']
 remappings = [
     '@openzeppelin/=node_modules/@openzeppelin/',
     'hot-chain-svg/=contracts/',
-    'hot-chain-svg/scripts/=contracts/scripts/',
+    'hot-chain-svg-script/=script/',
     'openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/'
 ]
+
+[profile.watch]
+ffi = true
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
